--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,12 @@ apply plugin: 'com.google.gms.google-services'
 
 android {
     namespace 'com.hfm.app'
-    compileSdkVersion 34   
+    compileSdkVersion 34
 
     defaultConfig {
         applicationId "com.hfm.app"
         // --- THIS IS THE FIX ---
-        // Increase the minimum SDK version to 23 to match the Firebase library requirement.
+        // Increased the minimum SDK version to 23 to match the Firebase library requirement.
         minSdkVersion 23
         targetSdkVersion 34
         versionCode 1
@@ -23,8 +23,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     packagingOptions {
@@ -68,7 +68,7 @@ dependencies {
     // Hidden dependencies of Fragment/Biometric
     implementation 'androidx.activity:activity:1.8.2'
     implementation 'androidx.savedstate:savedstate:1.2.1'
-    
+
     // Archive handling libraries
     implementation 'net.lingala.zip4j:zip4j:2.11.5'
     implementation 'com.github.junrar:junrar:7.5.5'
@@ -82,4 +82,7 @@ dependencies {
     // Firebase SDKs for HFM Messenger Drop
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-firestore'
+
+    // libtorrent4j for robust P2P file transfer
+    implementation 'org.libtorrent4j:libtorrent4j-android:2.0.9'
 }
