--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,9 +21,9 @@ android {
     }
 
     compileOptions {
-        // Updated to Java 17 for libtorrent4j 2.x compatibility
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        // --- CHANGE 1: Downgraded to Java 8 for jlibtorrent 1.x compatibility ---
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     packagingOptions {
@@ -83,7 +83,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore'
 
     // TORRENT CLIENT - Official libtorrent4j from Maven Central (core Java + ARM64 natives)
-    def libtorrentVersion = "2.1.0-38"
+    // --- CHANGE 2: Set to the version that matches your code's API ---
+    def libtorrentVersion = "1.2.0.19"
     implementation "org.libtorrent4j:libtorrent4j:$libtorrentVersion"
     implementation "org.libtorrent4j:libtorrent4j-android-arm64:$libtorrentVersion"
 }
