--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.txtify.app"> 
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"> 
 
     <!-- Permissions to read and write files -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -27,7 +26,8 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:windowSoftInputMode="adjustResize">
+            android:windowSoftInputMode="adjustResize"
+            android:exported="true">
 
             <!-- This intent-filter makes the app show up in the launcher -->
             <intent-filter>
@@ -70,4 +70,3 @@
 
     </application>
 </manifest>
-
